RbA Build/src/objects/SVMXC__Service_Order__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Skill_Set__c</fullName>
        <label>Skill Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Skill required to service the work order. Calculated by OptiMax pre-calculation engine</description>
        <label>Skill</label>
        <referenceTo>SVMXC__Skill__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Special_Instructions__c</fullName>
        <description>Relevant instructions for future service events for the same product/customer</description>
        <inlineHelpText>Relevant instructions for future service events for the same product/customer</inlineHelpText>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Started_Driving_To_Location_Date_Time__c</fullName>
        <description>Date and time when technician starts driving towards the work order location</description>
        <inlineHelpText>Date and time when technician starts driving towards the work order location</inlineHelpText>
        <label>Started Driving To Location Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__State__c</fullName>
        <description>“State” part of the work order location</description>
        <inlineHelpText>“State” part of the work order location</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Street__c</fullName>
        <description>“Street” part of the work order location</description>
        <inlineHelpText>“Street” part of the work order location</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Symptom__c</fullName>
        <description>Symptom that was noted before the failure.</description>
        <inlineHelpText>Symptom that was noted before the failure.</inlineHelpText>
        <label>Symptom</label>
        <picklist>
            <picklistValues>
                <fullName>Sample Value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Value2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__TimeBetweenAssignAndSchedule__c</fullName>
        <description>Calculates the time taken for the work order to be scheduled after it was assigned</description>
        <formula>( SVMXC__FirstScheduledDateTime__c - SVMXC__First_Assigned_DateTime__c )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the time taken for the work order to be scheduled after it was assigned</inlineHelpText>
        <label>Time Between Assign And Schedule</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__TimeBetweenQueueAndAssign__c</fullName>
        <description>Indicates the amount of time it took for the work order to be assigned after being queued</description>
        <formula>( SVMXC__First_Assigned_DateTime__c - SVMXC__First_Queued_DateTime__c )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the amount of time it took for the work order to be assigned after being queued</inlineHelpText>
        <label>Time Between Queue And Assign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__TimeBetweenScheduleAndClose__c</fullName>
        <description>Indicates the amount of time it took for the work order to be closed after being scheduled</description>
        <formula>( SVMXC__Closed_On__c - SVMXC__FirstScheduledDateTime__c )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the amount of time it took for the work order to be closed after being scheduled</inlineHelpText>
        <label>Time Between Schedule And Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__TimeToAssign__c</fullName>
        <description>Indicates the amount of time it took for the work order to be assigned after being opened.</description>
        <formula>(SVMXC__First_Assigned_DateTime__c - CreatedDate )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the amount of time it took for the work order to be assigned after being opened.</inlineHelpText>
        <label>Time To Assign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__TimeToQueue__c</fullName>
        <description>Indicates the amount of time it took for the work order to be queued after being created</description>
        <formula>(SVMXC__First_Queued_DateTime__c- CreatedDate)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the amount of time it took for the work order to be queued after being created</inlineHelpText>
        <label>Time To Queue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__TimeToSchedule__c</fullName>
        <description>Indicates the amount of time it took for the work order to be scheduled after being opened</description>
        <formula>( SVMXC__FirstScheduledDateTime__c - CreatedDate )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the amount of time it took for the work order to be scheduled after being opened</inlineHelpText>
        <label>Time To Schedule</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_Between_Assign_And_Schedule_Bucket__c</fullName>
        <description>Time taken for the work order to be scheduled after it was assigned bucket. Used for reporting purpose</description>
        <formula>IF ( SVMXC__TimeBetweenAssignAndSchedule__c &lt;=2, &quot;Less Than 2 hours&quot;, IF ( SVMXC__TimeBetweenAssignAndSchedule__c &lt;= 6, &quot;2 To 6 hrs&quot;, IF ( SVMXC__TimeBetweenAssignAndSchedule__c &lt;= 10, &quot;6 to 10 hrs&quot;, &quot;Over 10 hrs&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be scheduled after it was assigned bucket. Used for reporting purpose</inlineHelpText>
        <label>Time Between Assign And Schedule Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_Between_Queue_And_Assign_Bucket__c</fullName>
        <description>Time taken for the work order to be assigned after it was queued bucket. Used for reporting purpose</description>
        <formula>IF (SVMXC__TimeBetweenQueueAndAssign__c &lt;=2, &quot;Less Than 2 hours&quot;, IF (SVMXC__TimeBetweenQueueAndAssign__c &lt;= 6, &quot;2 To 6 hours&quot;, IF (SVMXC__TimeBetweenQueueAndAssign__c &lt;= 10, &quot;6 to 10 hours&quot;, &quot;Over 10 hours&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be assigned after it was queued bucket. Used for reporting purpose</inlineHelpText>
        <label>Time Between Queue And Assign Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_Between_Schedule_And_Close_Bucket__c</fullName>
        <description>Time taken for the work order to be closed after it was scheduled bucket. Used for reporting purpose</description>
        <formula>IF (SVMXC__TimeBetweenScheduleAndClose__c &lt;=2, &quot;Less Than 2 hours&quot;, IF (SVMXC__TimeBetweenScheduleAndClose__c &lt;= 6, &quot;2 To 6 hours&quot;, IF (SVMXC__TimeBetweenScheduleAndClose__c &lt;= 10, &quot;6 to 10 hours&quot;, &quot;Over 10 hours&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be closed after it was scheduled bucket. Used for reporting purpose</inlineHelpText>
        <label>Time Between Schedule And Close Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_To_Close_c__c</fullName>
        <formula>( SVMXC__Closed_On__c - CreatedDate )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Assign_Bucket__c</fullName>
        <description>Time taken for the work order to be assigned bucket. Used for reporting purpose</description>
        <formula>IF ( SVMXC__TimeToAssign__c &lt;=2, &quot;Less Than 2 hours&quot;, IF ( SVMXC__TimeToAssign__c &lt;= 6, &quot;2 To 6 hrs&quot;, IF ( SVMXC__TimeToAssign__c &lt;= 10, &quot;6 to 10 hrs&quot;, &quot;Over 10 hrs&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be assigned bucket. Used for reporting purpose</inlineHelpText>
        <label>Time to Assign Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Initial_Response__c</fullName>
        <description>Time taken to initial response as per commitment in SLA.</description>
        <inlineHelpText>Time taken to initial response as per commitment in SLA.</inlineHelpText>
        <label>Time to Initial Response (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Onsite_Response__c</fullName>
        <description>Time taken to onsite response as per commitment in SLA.</description>
        <inlineHelpText>Time taken to onsite response as per commitment in SLA.</inlineHelpText>
        <label>Time to Onsite Response (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Queue_Bucket__c</fullName>
        <description>Time taken for the work order to be queued after it was opened bucket. Used for reporting purpose</description>
        <formula>IF ( SVMXC__TimeToQueue__c &lt;=2, &quot;Less Than 2 hours&quot;, IF ( SVMXC__TimeToQueue__c &lt;= 6, &quot;2 To 6 hrs&quot;, IF ( SVMXC__TimeToQueue__c &lt;= 10, &quot;6 to 10 hrs&quot;, &quot;Over 10 hrs&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be queued after it was opened bucket. Used for reporting purpose</inlineHelpText>
        <label>Time to Queue Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Resolve__c</fullName>
        <description>Time taken to resolve as per commitment in SLA.</description>
        <inlineHelpText>Time taken to resolve as per commitment in SLA.</inlineHelpText>
        <label>Time to Resolve (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Restore__c</fullName>
        <description>Time taken to restore as per commitment in SLA.</description>
        <inlineHelpText>Time taken to restore as per commitment in SLA.</inlineHelpText>
        <label>Time to Restore (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Schedule_Bucket__c</fullName>
        <description>Time taken for the work order to be scheduled after it was opened bucket. Used for reporting purpose</description>
        <formula>IF (SVMXC__TimeToSchedule__c &lt;=2, &quot;Less Than 2 hours&quot;, IF (SVMXC__TimeToSchedule__c &lt;= 6, &quot;2 To 6 hours&quot;, IF (SVMXC__TimeToSchedule__c &lt;= 10, &quot;6 to 10 hours&quot;, &quot;Over 10 hours&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be scheduled after it was opened bucket. Used for reporting purpose</inlineHelpText>
        <label>Time to Schedule Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Top_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the top-level installed product to which the component belongs. Is a lookup to an existing installed product record in ServiceMax.</description>
        <inlineHelpText>Serial number of the top-level installed product to which the component belongs. Is a lookup to an existing installed product record in ServiceMax.</inlineHelpText>
        <label>Top-Level</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>Service_Order_Top_Level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Billable_Amount__c</fullName>
        <description>Total Amount which is billed to the customer for the work performed.</description>
        <inlineHelpText>Total Amount which is billed to the customer for the work performed.</inlineHelpText>
        <label>Total Billable Amount</label>
        <summarizedField>SVMXC__Service_Order_Line__c.SVMXC__Total_Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Usage/Consumption</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Is_Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Estimate__c</fullName>
        <description>Total Estimate cost of the work to be performed.</description>
        <inlineHelpText>Total Estimate cost of the work to be performed.</inlineHelpText>
        <label>Total Estimate</label>
        <summarizedField>SVMXC__Service_Order_Line__c.SVMXC__Total_Estimated_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Estimate</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Work_Order_Cost__c</fullName>
        <description>Total cost of the work actual performed on the work order.</description>
        <inlineHelpText>Total cost of the work actual performed on the work order.</inlineHelpText>
        <label>Total Work Order Amount</label>
        <summarizedField>SVMXC__Service_Order_Line__c.SVMXC__Total_Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Usage/Consumption</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SVMXC__Travel_Rate__c</fullName>
        <description>Derived from Travel Policy</description>
        <label>Travel Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Travel_Unit__c</fullName>
        <description>Derived from Travel Policy</description>
        <label>Travel Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered Per Mile/Km</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Turnaround_Time__c</fullName>
        <description>Turnaround time. Calculated automatically</description>
        <formula>IF ((SVMXC__Closed_On__c - CreatedDate) &lt;= 7, &quot;Less Than 8 days&quot;, 
IF ((SVMXC__Closed_On__c - CreatedDate) &lt;= 15, &quot;8 To 15 days&quot;, 
IF ((SVMXC__Closed_On__c - CreatedDate) &lt;= 30, &quot;16 to 30 days&quot;, 
&quot;More Than 30 days&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnaround Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Violation_Message__c</fullName>
        <label>Violation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Violation_Status2__c</fullName>
        <label>Violation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Jeopardy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Warranty</description>
        <label>Warranty</label>
        <referenceTo>SVMXC__Warranty__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Order_Scheduling_Status__c</fullName>
        <description>Indicates various stages of the workflow of scheduling the work order</description>
        <inlineHelpText>Indicates various stages of the workflow of scheduling the work order</inlineHelpText>
        <label>Scheduling Status</label>
        <picklist>
            <controllingField>SVMXC__Order_Status__c</controllingField>
            <picklistValues>
                <fullName>To be scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tentative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En Route</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Performed__c</fullName>
        <description>Details of work performed to address/resolve the service order</description>
        <inlineHelpText>Details of work performed to address/resolve the service order</inlineHelpText>
        <label>Work Performed</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Zip__c</fullName>
        <description>“Zip code” part of the work order location</description>
        <inlineHelpText>“Zip code” part of the work order location</inlineHelpText>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Installation_Date__c</fullName>
        <formula>Sold_Order__r.Installation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date the Installation is Scheduled for.  Pulling from the Installation Work Order.</inlineHelpText>
        <label>Scheduled Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Details_from_Sales__c</fullName>
        <inlineHelpText>Special Notes from the Sales Rep</inlineHelpText>
        <label>Special Details from Sales</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Results__c</fullName>
        <inlineHelpText>Test Results</inlineHelpText>
        <label>Test Results</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presumed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>**MIGHT NEED TO FILTER TO THE RBA EMPLOYEE.

Name of the Person that completed the testing.</inlineHelpText>
        <label>Testing completed by?</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders (Testing completed by?)</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testing_documentation_sent_to_Customer__c</fullName>
        <inlineHelpText>Date the Testing Documentation was sent to the Customer.</inlineHelpText>
        <label>Testing documentation sent to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_image__c</fullName>
        <formula>CASE( SVMXC__Order_Type__c, 
&quot;Tech Measure&quot;, IMAGE (&quot;resource/TechMeasureText&quot;,&quot;Tech Measure&quot;), 
&quot;Install&quot;, IMAGE(&quot;resource/InstallText&quot;,&quot;Install&quot;), 
&quot;Service&quot;, IMAGE(&quot;resource/ServiceText&quot;,&quot;Service&quot;),
&quot;HOA&quot;, IMAGE(&quot;resource/HOAText&quot;,&quot;HOA&quot;),
&quot;Historical&quot;, IMAGE(&quot;resource/HistoricalText&quot;,&quot;Historical&quot;),
&quot;Building Permit&quot;, IMAGE(&quot;resource/BuildingPermitText&quot;,&quot;Building Permit&quot;),
&quot;LSWP&quot;, IMAGE(&quot;resource/LSWP&quot;,&quot;LSWP&quot;),
&quot;Paint/Stain&quot;, IMAGE(&quot;resource/PaintStainText&quot;,&quot;Paint/Stain&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Paint/Stain</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor Contacts</value>
            </filterItems>
            <filterItems>
                <field>$Source.Vendor__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders (LSWP)</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <label>Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Vendor preforming the work.</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Contractor</value>
            </filterItems>
            <infoMessage>The Vendor must be associated with the Store the Order is associated to.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (LSWP)</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id,&quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Performed_Testing__c</fullName>
        <label>Who Performed Testing?</label>
        <picklist>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RbA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_Scheduled_Final_Inspection__c</fullName>
        <inlineHelpText>Who Scheduled Final Inspection?</inlineHelpText>
        <label>Who Scheduled Final Inspection</label>
        <picklist>
            <picklistValues>
                <fullName>Homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RbA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Work Order</label>
    <listViews>
        <fullName>Building_Permits</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SVMXC__Order_Status__c</columns>
        <columns>SVMXC__Work_Order_Scheduling_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SVMXC__Service_Order__c.Permit</value>
        </filters>
        <label>Building Permits</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HOA</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Company__c</columns>
        <columns>Municipality__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SVMXC__Order_Type__c</field>
            <operation>equals</operation>
            <value>HOA</value>
        </filters>
        <label>HOA</label>
    </listViews>
    <listViews>
        <fullName>Paint_Stain</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Company__c</columns>
        <columns>SVMXC__Order_Status__c</columns>
        <columns>Vendor__c</columns>
        <columns>Vendor_Contact__c</columns>
        <columns>Request_sent_to_Paint_Stain_Vendor__c</columns>
        <columns>Paint_Stain_Invoice_Attached__c</columns>
        <columns>Paint_Stain_Order_Attached_to_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SVMXC__Service_Order__c.Paint_Stain</value>
        </filters>
        <label>Paint/Stain</label>
    </listViews>
    <listViews>
        <fullName>SVMXC__All_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Type_image__c</columns>
        <columns>SVMXC__Order_Type__c</columns>
        <columns>Municipality__c</columns>
        <columns>SVMXC__Company__c</columns>
        <columns>SVMXC__Product__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SVMXC__Order_Status__c</columns>
        <columns>SVMXC__Closed_On__c</columns>
        <columns>SVMXC__Preferred_Technician__c</columns>
        <columns>SVMXC__Group_Member__c</columns>
        <columns>SVMXC__City__c</columns>
        <columns>SVMXC__Scheduled_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Schedule_Install_TwinCity_Service_Order</fullName>
        <columns>SVMXC__Work_Order_Scheduling_Status__c</columns>
        <filterScope>Queue</filterScope>
        <label>Schedule - Install - TwinCity</label>
        <queue>Schedule_Install_TwinCity</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Schedule_Permit_TwinCity_Service_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Schedule Permit TwinCity</label>
        <queue>Schedule_Permit_TwinCity</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Schedule_Tech_TwinCity_Service_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Schedule - Tech - TwinCity</label>
        <queue>Schedule_Tech_TwinCity</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unassigned_Twin_City_Service_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Unassigned - Twin City</label>
        <queue>Unassigned_Twin_City</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>WO-{00000000}</displayFormat>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <recordTypes>
        <fullName>Actions</fullName>
        <active>true</active>
        <description>Work Order that require Action (HOA, Historical)</description>
        <label>Actions</label>
    </recordTypes>
    <recordTypes>
        <fullName>LSWP</fullName>
        <active>true</active>
        <description>Used to track LSWP actions</description>
        <label>LSWP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Paint_Stain</fullName>
        <active>true</active>
        <description>Hold Paint / Stain Details</description>
        <label>Paint/Stain</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permit</fullName>
        <active>true</active>
        <description>Holds Building Permit Details</description>
        <label>Permit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Visit</fullName>
        <active>true</active>
        <description>Work Orders where a home visit is required</description>
        <label>Visit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LSWP_Closed</fullName>
        <active>true</active>
        <description>Before Closing a LSWP Work Order the following fields are required:
Vendor, Order Attached, Invoice Attached, Request Sent to Vendor.</description>
        <errorConditionFormula>AND(
RecordType.Name = &quot;Paint/Stain&quot;,
ISPICKVAL(SVMXC__Order_Status__c , &quot;Closed&quot;),
OR(
ISBLANK(Request_sent_to_Paint_Stain_Vendor__c),
Paint_Stain_Order_Attached_to_Order__c = False,
Paint_Stain_Invoice_Attached__c = False,
ISBLANK (Vendor__c)
))</errorConditionFormula>
        <errorDisplayField>SVMXC__Order_Status__c</errorDisplayField>
        <errorMessage>Before Closing a LSWP Work Order the following fields are required:
Vendor, Order Attached, Invoice Attached, Request Sent to Vendor.</errorMessage>
    </validationRules>
</CustomObject>